cleanUp DomainBlockingService